# hbc2-ide

./: .gitignore  README.md  codeLinesNumber.sh  projectStats.sh
Documentation/: Keyboard manual.txt  notes.txt  µopcode_description.ods  µopcode_list.ods
Documentation/Code Doc/: HBC-2 Architecture.pptx
Documentation/Files sources/: CPU description.ods  CPU diagram.odg  Instructions Manual.odt
Documentation/Peripherals/EEPROM/: Specifications.txt
Documentation/Peripherals/Keyboard/: Specifications.txt
Documentation/Screen/: Color palette.ods  Specifications.txt
Github Website/documentation/html/: annotated.html  assembler_8h.html  assembler_8h__incl.map  assembler_8h_source.html  binary_viewer_8h_source.html  chunks_8h_source.html  class_about_dialog.html  class_assembly_1_1_assembler-members.html  class_assembly_1_1_assembler.html  class_binary_viewer-members.html  class_binary_viewer.html  class_binary_viewer__coll__graph.map  class_char_command__inherit__graph.map  class_console-members.html  class_console__inherit__graph.map  class_console__inherit__graph.md5  class_customized_code_editor-members.html  class_customized_code_editor.html  class_customized_code_editor__inherit__graph.map  class_hbc_emulator-members.html  class_hbc_emulator.html  class_hbc_emulator__inherit__graph.md5  class_hbc_monitor-members.html  class_hbc_monitor__coll__graph.map  class_hbc_monitor__coll__graph.md5  class_hbc_monitor__inherit__graph.map  class_hbc_peripheral-members.html  class_hbc_peripheral.html  class_hbc_peripheral__coll__graph.md5  class_hbc_peripheral__inherit__graph.map  class_hbc_peripheral__inherit__graph.md5  class_line_number_area-members.html  class_main_window__coll__graph.map  class_main_window__coll__graph.md5  class_monitor_thread-members.html  class_monitor_widget.html  class_monitor_widget__coll__graph.md5  class_project-members.html  class_project.html  class_project_item.html  (+151 more)
Github Website/documentation/html/search/: all_12.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  files_1.js  files_2.js  files_3.js  files_6.js  files_8.js  files_9.js  functions_1.js  functions_11.js  functions_12.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  namespaces_1.js  (+17 more)
HBC-2_IDE/: CMakeLists.txt  assembler.cpp  assembler.h  binaryExplorer.cpp  binaryExplorer.h  binaryViewer.cpp  binaryViewer.h  chunks.cpp  chunks.h  codeEditor.cpp  codeEditor.h  commands.cpp  commands.h  computerDetails.cpp  computerDetails.h  config.cpp  config.h  console.cpp  console.h  cpu.cpp  cpu.h  cpuDetails.h  cpuStateViewer.cpp  cpuStateViewer.h  customizedEditor.cpp  customizedEditor.h  diassembler.cpp  disassembler.h  eeprom.cpp  eeprom.h  emulator.cpp  emulator.h  fileManager.cpp  fileManager.h  fr_lang.ts  iod.cpp  iod.h  keyboard.cpp  keyboard.h  main.cpp  (+27 more)
Logisim/: Circuit.circ  TODO.txt  TTL_Version.circ  µcodeRom
docs/: index.html
docs/documentation/html/: annotated.html  assembler_8h.html  assembler_8h__dep__incl.map  assembler_8h__dep__incl.md5  assembler_8h__incl.map  assembler_8h__incl.md5  assembler_8h_source.html  binary_viewer_8h.html  binary_viewer_8h__dep__incl.map  binary_viewer_8h__dep__incl.md5  binary_viewer_8h__incl.map  binary_viewer_8h__incl.md5  binary_viewer_8h_source.html  class_about_dialog-members.html  class_about_dialog.html  class_about_dialog__coll__graph.md5  class_about_dialog__inherit__graph.map  class_assembly_1_1_assembler-members.html  class_assembly_1_1_assembler.html  class_binary_viewer-members.html  class_binary_viewer.html  class_binary_viewer__coll__graph.md5  class_char_command-members.html  class_char_command.html  class_char_command__coll__graph.md5  class_code_editor-members.html  class_code_editor.html  class_code_editor__coll__graph.md5  class_code_editor__inherit__graph.map  class_code_editor_breakpoint_area-members.html  class_code_editor_breakpoint_area.html  class_code_editor_breakpoint_area__inherit__graph.map  class_code_editor_breakpoint_area__inherit__graph.md5  class_code_editor_line_number_area-members.html  class_code_editor_line_number_area.html  class_code_editor_line_number_area__coll__graph.map  class_code_editor_line_number_area__coll__graph.md5  class_config_manager-members.html  class_config_manager.html  class_console.html  (+420 more)
docs/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  (+91 more)
